input field valid option

--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,7 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.notValid input {
+  background-color: rgba(255, 0, 0, 0.466);
+}
