--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -18,3 +18,9 @@
   border-color: #ac0e77;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
 }
+
+@media (max-width: 700px) {
+  .button {
+    width: 100%;
+  }
+}
